2010-08-02  Karl Berry  <karl@gnu.org>

	* texi2html.pl (T2H_OBSOLETE_OPTIONS): 'quote' key names,
	for our preferred style.  (Many unquoted remain, though.)

2010-07-25  Karl Berry  <karl@gnu.org>

	* texi2html.init (ERROR_LIMIT),
	* texi2html.pl (error-limit): set to 100.

2010-07-19  Karl Berry  <karl@gnu.org>

	* texi2html.pl (collect_renamed_nodes): comments begin with @c\b,
	not just @c.

2010-07-19  Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl: do redirection files for renamed nodes, using 
	%Texi2HTML::Config::renamed_nodes, completed by what is specified
	in RENAMED_NODES_FILE with default for RENAMED_NODES_FILE being
	<file_base_name>-noderename.cnf. In RENAMED_NODES_FILE comments
	are like texinfo comments, they begin with @c. Old node name are
	gathered on non empty lines and corresponding new node files
	follow, preceded by @@{}. Based on an idea of Karl.
	* Makefile.am: texi2any is created in the build directory.

2010-07-18  Karl Berry  <karl@gnu.org>

	* AUTHORS: merge into texinfo/AUTHORS.
	* INSTALL: remove, now obsolete.
	* README: rewrite, now part of Texinfo.
	* README.dev: move some info here.

2010-07-18  Patrice Dumas  <pertusus@free.fr>

	* Makefile.am: modify on the fly $(PACKAGE)_document.pot to set
	the charset to ascii and not CHARSET since msgexec doesn't like
	this anymore.
	* texi2html.init: remove space at the beginning of the second
	@email argument when removing texi.

2010-07-17  Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl: accept --set-init-var VAR=VALUE syntax. Karl
	idea.
	* texi2html.pl: for split documents, append the extension to
	the out directory, and try with the new directory, if the normal
	one cannot be used.
	* texi2html.pl, texi2html.init, formats/html.init: do redirection 
	files for renamed nodes (in %renamed_nodes), configuration 
	variable RENAMED_NODES_REDIRECTIONS set in html only.
	* texi2html.pl: don't show menu with --no-headers as said in the
	makeinfo documentation.
